# pulsegen

./: .cproject  .editorconfig  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  Readme.md  common.mk  project.yml  requirements.txt
cmake/: arm-gcc-toolchain.cmake  gitversion.cmake
src/: controller.cc  controller.h  main.c  main.cc
src/app/: CMakeLists.txt  main.c
src/application/: CMakeLists.txt  controller.cc
src/application/pulsegen/: CMakeLists.txt  STM32F107RCTx_FLASH.ld  main.c  main.cc  startup_stm32f107xc.s
src/application/pulsegen/include/pulsegen/: systate.h
src/application/pulsegen/legacy/: controller.h
src/application/pulsegen/legacy/gfx/include/gfx/: gfx.h
src/arch/: CMakeLists.txt
src/arch/include/hal/: gpio.h  sys.h
src/arch/stm32f107/: startup_stm32f107xc.s  sys.c  system.c  system_stm32f1xx.c  timer.c
src/bsp/: board.h  system_stm32f1xx.c
src/gfx/include/: ui.h
src/gfx/include/gfx/: gfx.h  textfield.h
src/gfx/src/: gfx.c  gfx.cc  textfield.cc  ugui.h  ui.c
src/gfx/src/ugui/: cppwrapper.cc  cppwrapper.h
src/hal/: STM32F107RCTx_FLASH.ld
src/hal/include/hal/: SSD1351.h  error.h  keybd.h  timer.h
src/hal/src/: SSD1351.c  haltim.c  keybd.c  privfn.h  startup_stm32f107xc.s  system_stm32f1xx.c  timer.c
src/hal/support/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_adc.h  stm32f1xx_hal_conf.h
src/hal/support/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_adc.c
src/hal/support/embedd/src/: cmsis_nvic.c
src/lib/gfx/include/gfx/: ui.h
src/lib/gfx/src/: ui.c
src/os/: CMakeLists.txt  FreeRTOSConfig.h
src/os/include/: FreeRTOSConfig.h
src/os/include/os/: defs.h  os.h  semphr.h  threads.h  timer.h
src/os/src/: os.c  queue.c  threads.c
src/platform/: CMakeLists.txt
src/platform/arch/: CMakeLists.txt
src/platform/arch/bsp/: STM32F107RCTx_FLASH.ld
src/platform/arch/stm32f107/: error.c  gpio.c  haltim.c  system_stm32f1xx.c
src/platform/arch/support/embed/include/embed/: cmsis_nvic.h
src/platform/arch/support/embed/src/: cmsis_nvic.c
src/platform/boot/: CMakeLists.txt
src/platform/boot/include/boot/: boot.h
src/platform/boot/src/: boot.c
src/platform/crc/: CMakeLists.txt
src/platform/crc/include/crc/: crc32.h
src/platform/crc/src/: crc32.c
src/platform/drivers/: CMakeLists.txt
src/platform/drivers/display/: CMakeLists.txt
src/platform/drivers/display/ssd1351/: CMakeLists.txt  ssd1351.c  ssd1351.h
src/platform/drivers/keys/: CMakeLists.txt  keybd.c
src/platform/drv/debounce/include/debounce/: debounce.h
src/platform/drv/debounce/src/: debounce.c
src/platform/hal/: CMakeLists.txt
src/platform/hal/include/hal/: SSD1351.h  gpio.h  hal_flash.h  uart.h
src/platform/hal/src/: dac.c  gpio.c  haltim.c  keybd.c  system_stm32f1xx.c  timer.c  uart.c
src/platform/hal/support/embedd/include/embedd/: cmsis_nvic.h
src/platform/include/bsp/: board.h
src/platform/include/hal/: timer.h
src/platform/include/os/: mutex.h  queue.h
src/platform/os/: CMakeLists.txt  FreeRTOSConfig.h
src/platform/os/include/: FreeRTOSConfig.h
src/platform/os/src/: syscalls.c
src/platform/sys/: CMakeLists.txt  syscalls.c
src/platform/sys/include/sys/: evt.h
src/platform/sys/src/: evt.c  syscalls.c
src/platform/ugui/: CMakeLists.txt  ugui.c  ugui.h
src/pulsegen/include/: statemgr.h  systate.h
src/pulsegen/include/pulsegen/: ctrl.h  pgen.h
src/pulsegen/src/: pgen.cc  statemgr.c
src/sys/: CMakeLists.txt
src/sys/include/: evt.h
src/sys/include/hal/: dac.h  timer.h
src/sys/include/sys/: evt.h
src/sys/src/: evt.c  syscalls.c
test/: test_test.c
test/support/crt/: Makefile  init.s  linker_script.ld  semihost.c  sysinit.c
tools/: debug.openocd  debug.sh  dump.openocd  flash.openocd  gdb.init  jlink.sh  qemu.sh
tools/scripts/: gitversion.py  jlink_flasher.py  jlink_test_fixture.py
